# dlpack-hs

./: CHANGELOG.md  README.md  dlpack-hs.cabal  flake.nix
.github/workflows/: ci.yml
app/: Main.hs
src/: DLPack.hs  DlpackHs.hs
src/DLPack/: Context.hs
test/: Spec.hs
