cabal-version:       2.4
name:                dlpack-hs
version:             0.0.1.0
synopsis:            Bindings to DLPack: Open In Memory Tensor Structure
description:         Bindings to DLPack: Open In Memory Tensor Structure
homepage:            https://github.com/twesterhout/dlpack-hs
bug-reports:         https://github.com/twesterhout/dlpack-hs/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2021 Tom Westerhout
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/twesterhout/dlpack-hs.git

common common-options
  build-depends:       base >= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  DerivingStrategies

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     DLPack

executable dlpack-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       dlpack-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite dlpack-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       dlpack-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
