cabal-version:       3.0
name:                dlpack-hs
version:             0.0.2.0
synopsis:            Bindings to DLPack: Open In Memory Tensor Structure
description:         Bindings to DLPack: Open In Memory Tensor Structure
homepage:            https://github.com/twesterhout/dlpack-hs
bug-reports:         https://github.com/twesterhout/dlpack-hs/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2021-2023 Tom Westerhout
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.8

source-repository head
  type:                git
  location:            https://github.com/twesterhout/dlpack-hs.git

common common-options
  build-depends:       base >= 4.16.0.0

  ghc-options:         -W
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  default-language:    GHC2021
  default-extensions:  DerivingStrategies
                     , MultiParamTypeClasses
                     , BangPatterns
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     DLPack
                       DLPack.Context
  build-depends:       inline-c
                     , containers
                     , primitive
                     , template-haskell
                     , text
                     , vector

executable dlpack-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       dlpack-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite dlpack-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       dlpack-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
